# link_shortener

./: .gitignore  Cargo.toml  README.md
migrations/: 20250611050501_create_links_table.sql  20250615093630_create_code_column.sql
public/: 404.html  edit.html  index.html
public/css/: 404.css  base.css  index.css
public/js/: edit.mjs  index.mjs
src/: lib.rs  main.rs
src/api/: links.rs  mod.rs
src/api/links/: create.rs
src/domain/: code.rs  href.rs  link_entry.rs  mod.rs  slug.rs
src/routes/: _404.rs  mod.rs  to.rs
src/routes/api/: health_check.rs  mod.rs
src/routes/api/links/: _delete.rs  _patch.rs  _post.rs  check.rs  create.rs  mod.rs
src/telemetry/: mod.rs
templates/: 404.html
tests/: _404.rs  check_link.rs  create_link.rs  delete_link.rs  health_check.rs  to.rs  update_link.rs
tests/utils/: mod.rs
