[package]
name = "link_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Web framework
axum = "0.8"

# Database
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
