[package]
name = "link_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Web framework
axum = "0.8"

# Configuration (from .env files)
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database
[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["tls-rustls", "runtime-tokio", "sqlite", "uuid"]
